# econ_spec_jel

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
docs/source/: changes.md  conf.py  index.md
documents/: paper.tex  presentation.tex  refs.bib  task.py
src/econ_spec_jel/: __init__.py  config.py
src/econ_spec_jel/analysis/: plotting_helper.py  task_descriptive_plots.py  task_network  task_network.py  task_plotting.py  task_topics_plot.py
src/econ_spec_jel/data_analysis/: __init__.py  task.py  task_plotting.py  task_preparation.py
src/econ_spec_jel/data_management/: clean_helper.py  task_clean.py  task_merge.py  task_preparation.py  task_topics_preparation.py
src/econ_spec_jel/data_preparation/: __init__.py  task.py
src/econ_spec_jel/data_scraping/: helper.py  task.py
src/econ_spec_jel/scraping/: __init__.py  task.py
src/econ_spec_jel/text_model/: __init__.py  task_model.py  task_topics.py
tests/: test_import.py
